# CompactOject

./: .buildinfo  .gitignore  .readthedocs.yaml  BayesianSampler.html  BayesianSampler.py  Bayesian_workflow.py  Compose_eos.html  Contributor.html  Cornerplot.html  DownloadCompose.html  EMCEE_MIT_bag.html  EMCEE_MIT_bag.ipynb  EMCEE_RMF.html  EMCEE_polytrope.html  EMCEE_strangeon.html  EOS.html  EoS_import.html  EoS_import.py  LICENSE  Likelihood.html  MITbag_EOS.html  Polytrope_EOS.html  README.md  RMF_DDH.html  RMF_EOS.html  SpeedofSound_EOS.html  Strangeon_EOS.html  TOV_solver.html  TOV_solver.py  Test_energy_density_1.csv  Test_pressure_1.csv  Tolos_crust_out.txt  UnitConventionForDeveloper.html  cluster.html  crust_EOS.html  fastRMF_EoS.html  genindex.html  index.html  installation.html  intro.html  (+31 more)
.doctrees/: BayesianSampler.doctree  Compose_eos.doctree  Contributor.doctree  Cornerplot.doctree  DownloadCompose.doctree  EMCEE_MIT_bag.doctree  EMCEE_RMF.doctree  EMCEE_polytrope.doctree  EMCEE_strangeon.doctree  EOS.doctree  EoS_import.doctree  Likelihood.doctree  MITbag_EOS.doctree  Polytrope_EOS.doctree  RMF_DDH.doctree  RMF_EOS.doctree  SpeedofSound_EOS.doctree  Strangeon_EOS.doctree  TOV_solver.doctree  UnitConventionForDeveloper.doctree  cluster.doctree  crust_EOS.doctree  environment.pickle  fastRMF_EoS.doctree  index.doctree  installation.doctree  intro.doctree  main.doctree  prior.doctree  publications.doctree  speed_of_sound.doctree  starthere.doctree  test_Bayesian_inference_DDH.doctree  test_Bayesian_inference_MITbag_EOS.doctree  test_EOSgenerators.doctree  (+5 more)
(+203 files in other folders)
